--- a/templates/user.hbs
+++ b/templates/user.hbs
@@ -478,8 +478,61 @@
     <div class="text-center mt-4">
       <a href="/shop" class="btn btn-outline-light btn-lg">Visit Shop <i class="bi bi-arrow-right ms-2"></i></a>
     </div>
+
+<!-- Direction Buttons -->
+<div class="text-center mt-3">
+  <div class="d-flex justify-content-center flex-wrap gap-2">
+    <button onclick="openDirections()" class="btn btn-success btn-lg">
+      📍 Get Directions
+    </button>
+    <a id="openInMaps" href="https://maps.app.goo.gl/i885AkNKNMcjDaoH9" 
+       target="_blank" 
+       class="btn btn-outline-primary btn-lg">
+      🚗 Open in Google Maps
+    </a>
   </div>
-</section>
+</div>
+
+<!-- Embedded Google Map -->
+<div class="text-center mt-4">
+  <iframe 
+    id="directionsMap"
+    src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDnphs9rressecIYYKehF89dWILJTWcMEs
+    &q=Maximum+Gamers+K.M+Opposite+Student+Centre&zoom=17" 
+    width="100%" 
+    height="400" 
+    style="border:0; border-radius:10px;" 
+    loading="lazy" 
+    allowfullscreen>
+  </iframe>
+</div>
+
+<script>
+  function openDirections() {
+    if (navigator.geolocation) {
+      navigator.geolocation.getCurrentPosition(function(position) {
+        let lat = position.coords.latitude;
+        let lng = position.coords.longitude;
+
+        // Update iframe with live directions (with closer zoom)
+        let iframe = document.getElementById("directionsMap");
+        iframe.src = `https://www.google.com/maps/embed/v1/directions?key=AIzaSyDnphs9rressecIYYKehF89dWILJTWcMEs
+          &origin=${lat},${lng}
+          &destination=Maximum+Gamers+K.M+Opposite+Student+Centre&zoom=17`;
+
+        // Update "Open in Maps" link for mobile
+        let mapsLink = document.getElementById("openInMaps");
+        mapsLink.href = `https://www.google.com/maps/dir/?api=1&origin=${lat},${lng}&destination=Maximum+Gamers+K.M+Opposite+Student+Centre`;
+      }, function() {
+        alert("Could not get your location. Please enable GPS.");
+      });
+    } else {
+      alert("Geolocation is not supported by your browser.");
+    }
+  }
+</script>
+
+
 
 <script>
   // Reusable cart hook
